--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+drf-yasg==1.21.7
+inflection==0.5.1
+packaging==23.1
+PyYAML==6.0.1
+uritemplate==4.1.1
 asgiref==3.7.2
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
-Django==4.2.5
+Django==3.2.21
 djangorestframework==3.14.0
 idna==3.4
 pytz==2023.3.post1
 requests==2.31.0
-soupsieve==2.5
+soupsieve==2.4.1
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.4
+gunicorn==20.1.0
